# seatools-starter-server-uvicorn

./: .cookiecutter.json  README.md  pyproject.toml
docs/: 版本说明.md
src/seatools/ioc/starters/uvicorn/: main.py
